<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.dili</groupId>
    <artifactId>settlement-service</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <description>settlement-service</description>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>13</java.version>
        <!--  MyBatis Generator  -->
        <!--  Java接口和实体类  -->
        <targetJavaProject>${basedir}/src/main/java</targetJavaProject>
        <targetMapperPackage>com.dili.settlement.dao</targetMapperPackage>
        <targetModelPackage>com.dili.settlement.domain</targetModelPackage>
        <targetServicePackage>com.dili.settlement.service</targetServicePackage>
        <targetControllerPackage>com.dili.settlement.controller</targetControllerPackage>
        <templateRootDir>${basedir}/mbg-templates</templateRootDir>
        <!--  XML生成路径  -->
        <targetResourcesProject>${basedir}/src/main/resources</targetResourcesProject>
        <targetXMLPackage>mapper</targetXMLPackage>
    </properties>

    <!-- 父工程定义 -->
    <parent>
        <artifactId>settlement-parent</artifactId>
        <groupId>com.dili</groupId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <!--地利-->
    <distributionManagement>
        <repository>
            <id>central</id>
            <name>Artifactory Release Repository</name>
            <url>
                http://mvn2.diligrp.com/artifactory/libs-release-local
            </url>
        </repository>
        <snapshotRepository>
            <id>central</id>
            <name>Artifactory Snapshot Repository</name>
            <url>
                http://mvn2.diligrp.com/artifactory/libs-snapshot-local
            </url>
        </snapshotRepository>
    </distributionManagement>

    <profiles>
        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <build.profile.id>dev</build.profile.id>
            </properties>
        </profile>
        <profile>
            <id>test</id>
            <properties>
                <build.profile.id>test</build.profile.id>
            </properties>
        </profile>
    </profiles>

    <build>
        <finalName>settlement-service</finalName>
        <!-- 资源文件过滤 -->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <!-- 编译JDK版本 -->
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <parameters>true</parameters>
<!--                    <compilerArgument>-proc:none</compilerArgument>-->
                    <compilerArgs>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>2.2.2.RELEASE</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>xls</nonFilteredFileExtension>
                        <nonFilteredFileExtension>xlsx</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>

        <!-- spring boot 基类  -->
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>ss-beetl</artifactId>
			<version>${sharp-sword.version}</version>
		</dependency>
        <dependency>
            <groupId>com.dili</groupId>
            <artifactId>ss-processor</artifactId>
            <version>${sharp-sword.version}</version>
           <exclusions>
               <exclusion>
                   <groupId>com.sun</groupId>
                   <artifactId>tools</artifactId>
               </exclusion>
           </exclusions>
        </dependency>
        <!-- if you enable json support in spring mvc. -->
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-mapper-asl</artifactId>
            <version>1.9.13</version>
        </dependency>

        <!-- ===============  spring cloud starters  =============== -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.alibaba.cloud</groupId>
            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
            <version>2.1.1.RELEASE</version>
            <exclusions>
                <exclusion>
                    <groupId>com.alibaba</groupId>
                    <artifactId>fastjson</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.alibaba.cloud</groupId>
            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
            <version>2.1.1.RELEASE</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-openfeign</artifactId>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.springframework/springloaded -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>springloaded</artifactId>
            <version>${springloaded.version}</version>
        </dependency>
        <!-- 内部包  -->
        <dependency>
            <groupId>com.dili</groupId>
            <artifactId>commons</artifactId>
            <version>1.1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.dili</groupId>
            <artifactId>uap-sdk</artifactId>
            <version>2.6.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
            <version>5.1.2</version>
        </dependency>
    </dependencies>
</project>